Archive2/93/2e87b263692e3f/output
main.cpp:4:7: error: 'Deducer' is not a class template
 class Deducer<T>;
       ^
main.cpp: In function 'auto autoReturningFunc()':
main.cpp:15:20: error: returning initializer list
     return {1,2,3,4};
                    ^
main.cpp: In function 'int main()':
main.cpp:22:26: error: aggregate 'Deducer<std::initializer_list<int> > d1' has incomplete type and cannot be defined
     Deducer<decltype(x)> d1;
                          ^
main.cpp: In instantiation of 'void func(const T&) [with T = int]':
main.cpp:20:12:   required from here
main.cpp:10:16: error: 'Deducer<int> d2' has incomplete type
     Deducer<T> d2;
                ^
